# python-template

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  session-ses_3557.md
python-template/: cookiecutter.json
python-template/{{cookiecutter.project_name}}/: .pre-commit-config.yaml
src/simple_python/: __init__.py  __main__.py
tests/: test_simple_python.py
